Fixing some css issues on IOS

--- a/src/app/blog/[slug]/page.module.css
+++ b/src/app/blog/[slug]/page.module.css
@@ -17,6 +17,7 @@
     margin-top: 0;
     margin-bottom: 10px;
     line-height: 1.2;
+    color: #000;
   }
   
   .postMeta {
