--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -15,7 +15,7 @@
   .postItem {
     border-bottom: 1px solid #eee;
     padding-bottom: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 75px;
   }
   
   .postItem:last-child {
@@ -32,12 +32,12 @@
   
   .postTitle a {
     text-decoration: none;
-    color: inherit;
+    color: #000;
   }
   
   .postTitle a:hover {
     text-decoration: underline;
-    color: #0056b3; /* Example hover color */
+    color: #000; /* Example hover color */
   }
   
   .postMeta {
@@ -57,7 +57,7 @@
     display: inline-block;
     text-decoration: none;
     font-weight: bold;
-    color: #0070f3; /* Example link color */
+    color: #000; /* Example link color */
   }
   
   .readMore:hover {
